# FoundationPose

./: .gitignore  CMakeLists.txt  Utils.py  build_log.txt  collect_perf.py  estimater.py  live_run.py  package.xml  requirements38.txt  run_demo.py  test.py
bundlesdf/mycuda/: common.cu
config/: params.yaml
data/cube/: Untitled.mtl
data/oilpalm/: oilpalm.mtl
data/shelf_small/: shelf_small.mtl
launch/: foundationpose_oilpalm.launch  foundationpose_pallet.launch  foundationpose_tracker.launch
learning/models/: refine_network.py
learning/training/: predict_pose_refine.py  predict_score.py
rviz/: foundationpose.rviz
scripts/: foundationpose_tracker.py  run_foundationpose.sh  test.py  tracker_node.py
