<?xml version="1.0"?>
<package format="2">
  <name>ros_foundationpose</name>
  <version>0.0.0</version>
  <description>ROS wrapper for FoundationPose tracking.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <!-- build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build-time deps -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- run-time deps -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
